Beetle and misc updates

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -56,10 +56,7 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/-wN6vijWhWI?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="pro-vid">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/8ycXXbtS7zw?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
-</div>
-<div id="pro-train-vid">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/tY1ZUDknsBs?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/vGgs7_6oxHU?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="brlm-vid">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/3v3Y6jtWtnQ?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
