--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ permalink: /
             <a class="btn" href="/navigator">read more +</a>
             <div class="caption">
               <h4><a href="/navigator">Navigator</a></h4>
-              <p>Portable Rotary Hose Device (RHD) for pipes with bends</p>
+              <p>Rotary cleaning for small process conduit with multiple bends</p>
             </div>
           </div>
         </div>
@@ -167,11 +167,12 @@ permalink: /
     <div class="section-heading">
       <h2>Events</h2>
     </div>
-    <a href="http://www.ifat.de/" target="_blank"><img src="/assets/img/thumb/upcoming_events_ifat2016.jpg" class="img-responsive"/></a>
+    <a href="http://www.fuelethanolworkshop.com/" target="_blank"><img src="/assets/img/thumb/upcoming_events_FEW-show-2016.jpg" class="img-responsive"/></a>
     <div class="caption">
-    <h4><a href="http://www.ifat.de/" target="_blank">2016 IFAT<br><span class="small">May 30–June 3, 2016<br>
-        Munich, Germany</span></a></h4>
-      <p>Presenting a comprehensive overview of the technological solutions and perspectives available from all around the world, IFAT is a great opportunity for industry and municipal authorities to discover innovations offered to the environmental technology sector.</p>
+    <h4><a href="http://www.fuelethanolworkshop.com/" target="_blank">FEW 2016<br><span class="small">June 20-23, 2016<br>
+        Milwaukee, WI</span></a></h4>
+      <p>Now in its 32nd year, the FEW provides the global ethanol industry with cutting-edge content and unparalleled networking opportunities in a dynamic business-to-business environment. The FEW is the largest, longest running ethanol conference in the world — and the only event powered by Ethanol Producer Magazine. 
+      </p>
     </div>
   </div>
   <!-- End Events --> 
