--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -1009,7 +1009,7 @@ master-slider: yes
         <div class="insight">
           <img src="../assets/img/quote.png" alt="quote" class="quote" />
           <p>Lines we've only been able to poke holes in are draining like no one has seen in over 20 years.</p>
-          <p class="signed">-Dean Tramontana,<br/>La Place Equipment Co.</p>
+          <p class="signed">-Dean Tramontana,<br/>StoneAge Louisiana</p>
         </div>
         <img src="../assets/img/sliders/beetle-u-tube.jpg" alt="Banshee Beetle for u-tube exchangers">
       </div>
