--- a/rotary-waterblast-tools/rotary-swivels.html
+++ b/rotary-waterblast-tools/rotary-swivels.html
@@ -794,6 +794,7 @@ master-slider: yes
               <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#UHS-H9H9" aria-controls="UHS-H9H9" role="tab" data-toggle="tab">UHS-H9H9</a></li>
                 <li role="presentation"><a href="#UH-H9H6" aria-controls="UH-H9H6" role="tab" data-toggle="tab">UH-H9H6</a></li>
+                <li role="presentation"><a href="#UH-H9G12" aria-controls="UH-H9G12" role="tab" data-toggle="tab">UH-H9G12</a></li>
               </ul>
               <!-- Tab panes -->
               <div class="tab-content">
@@ -882,7 +883,60 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Shaft Connection</th>
-                      <td colspan="2">3/8 HP, G12</td>
+                      <td colspan="2">3/8 HP</td>
+                    </tr>
+                    <tr>
+                      <th>Diameter</th>
+                      <td>2.5 in.</td>
+                      <td><span class="metric">64 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Length</th>
+                      <td>8.8 in.</td>
+                      <td><span class="metric">220 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Weight</th>
+                      <td>7.5 lb</td>
+                      <td><span class="metric">3.4 kg</span></td>
+                    </tr>
+                  </tbody>
+                  </table>
+                  <p class="small">*Break in new seals for 1/2 hour at 500 rpm max.</p>
+                </div>
+                <!-- UH-H9G12 -->
+                <div role="tabpanel" class="tab-pane" id="UH-H9G12">
+                  <table class="table specs table-hover">
+                  <tbody>
+                    <tr>
+                      <th>Tool Model</th>
+                      <td colspan="2">UH-H9G12</td>
+                    </tr>
+                    <tr>
+                      <th>Maximum Pressure</th>
+                      <td>44k psi</td>
+                      <td><span class="metric">3000 bar</span
+                    ></tr>
+                    <tr>
+                      <th>Maximum Flow</th>
+                      <td>20 gpm</td>
+                      <td><span class="metric">76 l/min</span></td>
+                    </tr>
+                    <tr>
+                      <th>Rotation Speed*</th>
+                      <td colspan="2">0-1000 rpm</td>
+                    </tr>
+                    <tr>
+                      <th>Flow Coefficient</th>
+                      <td colspan="2">0.50 Cv</td>
+                    </tr>
+                    <tr>
+                      <th>Inlet Connection</th>
+                      <td colspan="2">9/16 HP</td>
+                    </tr>
+                    <tr>
+                      <th>Shaft Connection</th>
+                      <td colspan="2">G12</td>
                     </tr>
                     <tr>
                       <th>Diameter</th>
