--- a/waterblast-automation/prodrive-hose-feed.html
+++ b/waterblast-automation/prodrive-hose-feed.html
@@ -29,7 +29,7 @@ master-slider: yes
           <div class="ms-slide">
             <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/prodrive-01.jpg" alt="StoneAge ProDrive hose feed device">
             <img class="ms-thumb" src="../assets/img/product/thumb-prodrive-01.jpg" alt="thumb">
-              <a data-type="video" href="https://www.youtube.com/embed/8ycXXbtS7zw"> </a>
+              <a data-type="video" href="https://www.youtube.com/embed/vGgs7_6oxHU"> </a>
           </div>
           <div class="ms-slide">
             <img src="../assets/img/blank.gif" data-src="../assets/img/product/prodrive-03.jpg" alt="StoneAge ProDrive remote controlled pipe cleaning">
@@ -146,16 +146,6 @@ master-slider: yes
                 <!-- End Lightbox call -->
                 <p class="caption">AutoBox ProDrive Overview</p>
               </div>
-              <div class="col-sm-6">
-                <!-- Lightbox call -->
-                <div>
-                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #pro-train-vid">
-                    <img src="/assets/vid/thumb/pro-train-vid.png" alt="AutoBox ProDrive Training video" class="img-responsive" />
-                  </a>
-                </div>
-                <!-- End Lightbox call -->
-                <p class="caption">AutoBox ProDrive Training</p>
-              </div>
             </div>
           </div>
         </div>
@@ -171,8 +161,8 @@ master-slider: yes
             <div class="panel-body">
               <ul>
                 <li><a href="../assets/pdf/prodrive_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ProDrive Data Sheet</a></li>
-                <li><a href="../assets/pdf/sales-manual/ABX-PRO_base_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ProDrive Package Configuration</a></li>
                 <li><a href="../assets/pdf/manuals/ABX-PRO_manual_web.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ProDrive PRO-100 User Manual</a></li>
+                <li><a href="../assets/pdf/prodrive_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ProDrive Tool Talk</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
