--- a/waterblast-automation/torus-tr-130.html
+++ b/waterblast-automation/torus-tr-130.html
@@ -193,6 +193,10 @@ master-slider: yes
   </div>
   <div class="row row-centered">
     <div class="col-sm-2 col-centered">
+      <a href="tr-200"><img class="img-responsive" src="../assets/img/product/thumb-tr-200-01.jpg" alt="Torus TR-200">
+      <h5>Torus TR-200</h5></a>
+    </div>
+    <div class="col-sm-2 col-centered">
       <a href="torus-booms"><img class="img-responsive" src="../assets/img/product/thumb-boom-01.jpg" alt="Torus Positioning Booms">
       <h5>Torus Positioning Booms</h5></a>
     </div>
@@ -239,19 +243,18 @@ master-slider: yes
         <div class="insight">
           <img src="../assets/img/quote.png" alt="quote" class="quote" />
           <p>We rent the TR-130 to customers all the time. It requires very little maintenance and will get the job done every time.</p>
-          <p class="signed">-Dean Tramontana,<br/>LaPlace Equipment Company</p>
+          <p class="signed">-Dean Tramontana,<br/>StoneAge Louisiana</p>
         </div>
         <img src="../assets/img/sliders/tr130_hanging.jpg" alt="Torus tank cleaning tools">
       </div>
 
       <div class="item">
-<!--
         <div class="insight">
           <img src="../assets/img/quote.png" alt="quote" class="quote" />
-          <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
-          <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
+          <p>Cleaning our reactors with the StoneAge Torus 3D tool eliminated the possibility of causing damage to interior componentry.
+</p>
+          <p class="signed">- Brent Peveto,<br/>Nippon Chemical Texas, Inc. (NCTI)</p>
         </div>
--->
         <img src="../assets/img/sliders/tr_130_hanging_with_water.jpg" alt="Torus tank and vessel cleaning">
       </div>
 
