--- a/waterblast-automation/torus-tr-200.html
+++ b/waterblast-automation/torus-tr-200.html
@@ -187,6 +187,10 @@ The Torus TR-200 is the industry’s most powerful 3-D tool. It is capable of de
   </div>
   <div class="row row-centered">
     <div class="col-sm-2 col-centered">
+      <a href="/tr-130"><img class="img-responsive" src="../assets/img/product/thumb-tr-130-01.jpg" alt="Torus TR-130">
+      <h5>Torus TR-130</h5></a>
+    </div>
+    <div class="col-sm-2 col-centered">
       <a href="/torus-booms"><img class="img-responsive" src="../assets/img/product/thumb-boom-01.jpg" alt="Torus Positioning Booms">
       <h5>Torus Positioning Booms</h5></a>
     </div>
@@ -228,21 +232,23 @@ The Torus TR-200 is the industry’s most powerful 3-D tool. It is capable of de
       <div class="item active">
         <div class="insight">
           <img src="../assets/img/quote.png" alt="quote" class="quote" />
-          <p>We rent the TR-130 to customers all the time. It requires very little maintenance and will get the job done every time.</p>
-          <p class="signed">-Dean Tramontana,<br/>LaPlace Equipment Company</p>
+          <p>Cleaning our reactors with the StoneAge Torus 3D tool eliminated the possibility of causing damage to interior componentry.
+</p>
+          <p class="signed">- Brent Peveto,<br/>Nippon Chemical Texas, Inc. (NCTI)</p>
         </div>
-        <img src="../assets/img/sliders/tr200_in_tank.jpg" alt="Torus tank and vessel cleaning">
+        <img src="../assets/img/sliders/tr200_in_tank.jpg" alt="Torus tank cleaning tools">
       </div>
 
       <div class="item">
 <!--
         <div class="insight">
           <img src="../assets/img/quote.png" alt="quote" class="quote" />
-          <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
-          <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
+          <p>Cleaning our reactors with the StoneAge Torus 3D tool eliminated the possibility of causing damage to interior componentry.
+</p>
+          <p class="signed">- Brent Peveto,<br/>Nippon Chemical Texas, Inc. (NCTI)</p>
         </div>
 -->
-        <img src="../assets/img/sliders/tr200_in_tank.jpg" alt="Torus tank and vessel cleaning">
+        <img src="../assets/img/sliders/tr_130_hanging_with_water.jpg" alt="Torus tank and vessel cleaning">
       </div>
 
     </div><!-- End wrapper -->
