--- a/rotary-waterblast-tools/beetle.html
+++ b/rotary-waterblast-tools/beetle.html
@@ -27,9 +27,17 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/bt-01.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
-            <img class="ms-thumb" src="../assets/img/product/thumb-bt-01.jpg" alt="thumb">
+            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/bt-06.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
+            <img class="ms-thumb" src="../assets/img/product/thumb-bt-06.jpg" alt="thumb">
 <!--                <a data-type="video" href="https://www.youtube.com/embed/mSRf2yelD0I"> </a>-->
+          </div>
+          <div class="ms-slide">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/bt-02.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
+            <img class="ms-thumb" src="../assets/img/product/thumb-bt-02.jpg" alt="thumb">
+          </div>
+          <div class="ms-slide">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/bt-01.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
+            <img class="ms-thumb" src="../assets/img/product/thumb-bt-01.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
             <img src="../assets/img/blank.gif" data-src="../assets/img/product/bt-03.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
@@ -42,10 +50,6 @@ master-slider: yes
           <div class="ms-slide">
             <img src="../assets/img/blank.gif" data-src="../assets/img/product/bt-05.jpg" alt="ZBeetle rotary tube cleaning nozzles for small pipes with bends">
             <img class="ms-thumb" src="../assets/img/product/thumb-bt-05.jpg" alt="thumb">
-          </div>
-          <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/bt-02.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
-            <img class="ms-thumb" src="../assets/img/product/thumb-bt-02.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -330,6 +334,10 @@ master-slider: yes
       <h5>Banshee</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
+      <a href="/2inch-badger"><img class="img-responsive" src="../assets/img/product/thumb-badger-2in-04.jpg" alt="Badger Pipe Cleaning Tools">
+      <h5>2" Badger</h5></a>
+    </div>
+    <div class="col-sm-2 col-centered">
       <a href="/prodrive"><img class="img-responsive" src="../assets/img/product/thumb-prodrive-03.jpg" alt="AutoBox ProDrive pipe cleaning">
       <h5>ProDrive</h5></a>
     </div>
@@ -408,9 +416,9 @@ master-slider: yes
     <a class="right carousel-control" href="#carousel-product" role="button" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
-    </a>
+    </a> -->
   </div>
-</div> -->
+</div>
 <!--=== End Product Testimonials ===-->
 
 {% include footer-cta.html %}
