--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -32,16 +32,16 @@ master-slider: yes
 <!--                <a data-type="video" href="https://www.youtube.com/embed/mSRf2yelD0I"> </a>-->
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/banshee-02.jpg" alt="Banshee rotary tube lancing nozzles">
-            <img class="ms-thumb" src="../assets/img/product/thumb-banshee-02.jpg" alt="thumb">
-          </div>
-          <div class="ms-slide">
             <img src="../assets/img/blank.gif" data-src="../assets/img/product/banshee-03.jpg" alt="Banshee rotary tube cleaning nozzles">
             <img class="ms-thumb" src="../assets/img/product/thumb-banshee-03.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/banshee-04.jpg" alt="Banshee rotary tube cleaning nozzles">
-            <img class="ms-thumb" src="../assets/img/product/thumb-banshee-04.jpg" alt="thumb">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/bt-03.jpg" alt="Banshee rotary tube cleaning nozzles">
+            <img class="ms-thumb" src="../assets/img/product/thumb-bt-03.jpg" alt="thumb">
+          </div>
+          <div class="ms-slide">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/banshee-02.jpg" alt="Banshee rotary tube lancing nozzles">
+            <img class="ms-thumb" src="../assets/img/product/thumb-banshee-02.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
             <img src="../assets/img/blank.gif" data-src="../assets/img/product/banshee-05.jpg" alt="Banshee rotary tube cleaning nozzles">
@@ -1006,6 +1006,17 @@ master-slider: yes
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
+<!--
+        <div class="insight">
+          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
+          <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
+        </div>
+-->
+        <img src="../assets/img/sliders/bn_pressure_01.jpg" alt="Banshee tube cleaners">
+      </div>
+      
+      <div class="item">
         <div class="insight">
           <img src="../assets/img/quote.png" alt="quote" class="quote" />
           <p>Lines we've only been able to poke holes in are draining like no one has seen in over 20 years.</p>
