BT text correction

--- a/rotary-waterblast-tools/beetle.html
+++ b/rotary-waterblast-tools/beetle.html
@@ -69,7 +69,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
 
-      <p class="product-description">The same powerful features that make Banshee tools ideal for unplugging, cleaning and polishing tubes have been packed into the smallest rotary tools ever engineered — the Beetle BT18 and BT12.</p>
+      <p class="product-description">The same powerful features that make Badger tools ideal for unplugging, cleaning and polishing pipes have been packed into the smallest rotary tools ever engineered — the Beetle BT18 and BT12.</p>
       <p>The small diameter and short length of the Beetle models make them ideal for cleaning process piping, drain lines, u-tube bundles and other small ID tubes with bends and elbows that may have been inaccessible in the past.</p>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
