Good working WB lander

--- a/waterblast-tools-automated-equipment-2.html
+++ b/waterblast-tools-automated-equipment-2.html
@@ -2,18 +2,13 @@
 layout: default
 title: High-pressure tools and automated equipment for industrial cleaning
 excerpt: Waterblast tools and automated equipment for exchanger cleaning, pipe cleaning, surface preparation, tank and vessel cleaning, furnace and boiler cleaning, and rotary shotgun tools for high pressure hydroblasting.
-permalink: /waterblast-tools-automated-equipment
+permalink: /waterblast-tools-automated-equipment-2
 landing: yes
 ---
 
 
-<section class="landing">
-  <div class="row bg-lt-grey margin-bottom-30 header">
-<!--
-    <div class="col-sm-12 heading-img">
-      <img src="assets/img/sewer-family-2016.jpg" class="img-responsive" alt="Striker Remote Shotgunning System for Hydroblasting"/>
-    </div>
--->
+<section class="spincat landing">
+  <div class="row bg-lt-grey header">
     <div class="col-sm-12 heading">
       <h1>Waterblast Tools &amp; Equipment</h1>
       <h3>Rotary and Automated Tools for High Pressure Waterblasting</h3>
@@ -21,54 +16,34 @@ landing: yes
   </div>
 
   <!-- MixItUp Content -->
-  <div class="container margin-bottom-120">
-<!--
+  <div class="row margin-bottom-120">
     <div class="controls">
-      <label>Filter:</label>
+      <label>Filter for:</label>
 
-      <button class="filter" data-filter="all">All Applications</button>
-      <button class="filter" data-filter=".exchanger-cleaning">Exchanger Cleaning</button>
-      <button class="filter" data-filter=".surface-prep">Surface Preparation</button>
-      <button class="filter" data-filter=".pipe-cleaning">Pipe Cleaning</button>
+      <button class="filter" data-filter="all">All</button>
+      <button class="filter" data-filter=".exchanger-cleaning">Tubes</button>
+      <button class="filter" data-filter=".pipe-cleaning">Pipes</button>
+      <button class="filter" data-filter=".surface-prep">Surfaces</button>
+      <button class="filter" data-filter=".tank-cleaning">Tanks/Vessels</button>
+      <button class="filter" data-filter=".boiler-cleaning">Boilers/Furnaces</button>
+      <button class="filter" data-filter=".hydro-demo">Concrete</button>
+      <button class="filter" data-filter=".accessories">Accessories</button>
 
       <label>Sort:</label>
 
-      <button class="sort" data-sort="myorder:asc">Asc</button>
-      <button class="sort" data-sort="myorder:desc">Desc</button>
+      <button class="sort" data-sort="myorder:asc">Automated</button>
+      <button class="sort" data-sort="myorder:desc">Manual</button>
     </div>
--->
-
-    <!-- controls -->
-    <aside class="col-sm-2 right-sidebar filter-by">
-      <h2>Filter by:</h2>
-      <ul class="list-unstyled">
-        <li><a class="filter" data-filter="all">All Applications</a></li>
-        <li><a class="filter" data-filter=".exchanger-cleaning">Exchanger Cleaning</a></li>
-        <li><a class="filter" data-filter=".pipe-cleaning">Pipe Cleaning</a></li>
-        <li><a class="filter" data-filter=".surface-prep">Surface Preparation</a></li>
-        <li><a class="filter" data-filter=".tank-cleaning">Tank/Vessel Cleaning</a></li>
-        <li><a class="filter" data-filter=".boiler-cleaning">Boiler/Furnace Cleaning</a></li>
-        <li><a class="filter" data-filter=".hydro-demo">Concrete Hydrodemolition</a></li>
-        <li><a class="filter" data-filter=".accessories">Accessories</a></li>
-      </ul>
-      <br>
-      <h2>Sort by:</h2>
-      <ul class="list-unstyled">
-        <li><a class="sort" data-sort="myorder:asc">Automated</a></li>
-        <li><a class="sort" data-sort="myorder:desc">Rotary/manual</a></li>
-      </ul>
-<!--      <h2 class="filter" data-filter="all">Show All</h2>-->
-    </aside>
 
     <!-- product list -->
-    <div class="col-sm-10 margin-bottom-60 padding-left-60">
-      <div id="Container" class="directory">
+    <div class="row">
+      <div id="Container" class="container directory">
         
         <div class="mix exchanger-cleaning automated" data-myorder="1">
           <a href="/abx-2l">
             <img src="/assets/img/product/abx-2l-01.jpg" class="img-responsive" />
             <h3>AutoBox ABX-2L</h3>
-            <h5>Automated flex-lancing system</h5>
+            <h5>Automated flex-lancing for small diameter conduit</h5>
             <button>View Details</button>
           </a>
         </div>
@@ -167,7 +142,7 @@ landing: yes
           <a href="/blackhawk">
             <img src="/assets/img/product/blackhawk-01.jpg" class="img-responsive" />
             <h3>Blackhawk</h3>
-            <h5>Concrete hydrodemolition</h5>
+            <h5>Concrete hydrodemolition &amp; scarification</h5>
             <button>View Details</button>
           </a>
         </div>
@@ -194,7 +169,7 @@ landing: yes
           <a href="/cst-air">
             <img src="/assets/img/product/cst-04.jpg" class="img-responsive" />
             <h3>CST-Air</h3>
-            <h5>Cable-guided furnace and boiler cleaning</h5>
+            <h5>Cable-guided furnace/boiler cleaning</h5>
             <button>View Details</button>
           </a>
         </div>
@@ -338,7 +313,7 @@ landing: yes
           <a href="/rotary-swivels">
             <img src="/assets/img/product/swivel-01.jpg" class="img-responsive" />
             <h3>Rotary Swivels</h3>
-            <h5>Rotary motion for waterblast applications</h5>
+            <h5>Rotary motion for waterblasting</h5>
             <button>View Details</button>
           </a>
         </div>
