Dealer tab links on Contact

--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@ contact-main: yes
       </div>
       
       <!-- Ordering Tab Content -->
-      <div role="tabpanel" class="tab-pane" id="ordering-tab">
+      <div role="tabpanel" class="tab-pane" id="ordering-tab" data-target="#ordering-tab">
         <div class="row margin-bottom-120">
           <div class="col-sm-3 contact-method">
             <h3 class="bold">US &amp; Canada Waterblast Orders</h3>
