Location e-mail and map updates

--- a/loc-la.html
+++ b/loc-la.html
@@ -35,7 +35,7 @@ contact-la: yes
           <p><span class="slab">StoneAge Louisiana</span><br/>
             6023 Industrial Dr.<br/>Geismar, LA 70734<br/><br/>
             +1 (225) 508-3520<br/>
-            <a href="mailto:sales@stoneagetools.com">sales@stoneagetools.com</a><br/><br/>
+            <a href="mailto:sales-la@stoneagetools.com">sales-la@stoneagetools.com</a><br/><br/>
             <small>Monday to Friday 8:00am–5:00pm CST</small></p>
         </div>
       </aside>
