--- a/loc-houston.html
+++ b/loc-houston.html
@@ -35,7 +35,7 @@ contact-houston: yes
           <p><span class="slab">StoneAge Houston</span><br/>
             2150 Pansy St.<br/>Pasadena, TX 77503<br/><br/>
             +1 (281) 888-5069 <br/>
-            <a href="mailto:sales@stoneagetools.com">sales@stoneagetools.com</a><br/><br/>
+            <a href="mailto:sales-tx@stoneagetools.com">sales-tx@stoneagetools.com</a><br/><br/>
             <small>Monday to Friday 8:00am–5:00pm CST</small></p>
         </div>
       </aside>
