--- a/loc-ohio.html
+++ b/loc-ohio.html
@@ -34,7 +34,7 @@ contact-ohio: yes
           <p><span class="slab">StoneAge Ohio</span><br/>
             11859 Royalton Rd.<br/>N. Royalton, OH  44133<br/><br/>
             +1 (440) 230-8080 <br/>
-            <a href="mailto:sales@stoneagetools.com">sales@stoneagetools.com</a><br/><br/>
+            <a href="mailto:sales-oh@stoneagetools.com">sales-oh@stoneagetools.com</a><br/><br/>
             <small>Monday to Friday 8:00am–5:00pm EST</small></p>
         </div>
       </aside>
