news updates, etc

--- a/news.html
+++ b/news.html
@@ -17,6 +17,14 @@ permalink: /news
       
       <div class="media">          
         <div class="media-body">
+          <a href="http://info.stoneagetools.com/striker-discount-offer-limited"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> 10% OFF Striker</h4></a>
+          For a limited time, StoneAge is reducing the price of our highly successful Striker Remote Shotgun System by 10%.
+          <p class="grey"><small>E-blast &ndash; June 29, 2016</small></p>
+        </div>
+      </div>
+      
+      <div class="media">          
+        <div class="media-body">
           <a href="http://info.stoneagetools.com/double-the-life-of-your-44k-barracuda" target="_blank"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> Double the life of your 44k Barracuda</h4></a>
           The new <strong>BC 705 high pressure cartridge for 44k StoneAge Barracuda shotgun tools</strong> has successfully enabled many of our customers to double the operating life between maintenance cycles from 40 to 80 hours.
           <p class="grey"><small>E-blast &ndash; May 24, 2016</small></p>
