--- a/index.html
+++ b/index.html
@@ -184,6 +184,11 @@ permalink: /
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://info.stoneagetools.com/striker-discount-offer-limited">10% OFF Striker</a></h4>
+        <p>For a limited time, StoneAge is reducing the price of our highly successful Striker Remote Shotgun System by 10%.<br>
+<small><i class="fa fa-paper-plane-o"></i> E-blast, June 2016</small></p>
+      </li>
+      <li>
         <h4><a href="http://info.stoneagetools.com/double-the-life-of-your-44k-barracuda" target="_blank">Double the life of your 44k Barracuda</a></h4>
         <p>The new <strong>BC 705 high pressure cartridge for 44k StoneAge Barracuda shotgun tools</strong> has successfully enabled many of our customers to double the operating life between maintenance cycles from 40 to 80 hours.<br>
 <small><i class="fa fa-paper-plane-o"></i> E-blast, May 2016</small></p>
@@ -197,11 +202,6 @@ permalink: /
       <li>
         <h4><a href="http://info.stoneagetools.com/new-exchanger-cleaning-accessories-for-abx-2l" target="_blank">New Accessories for the AutoBox ABX-2L</a></h4>
         <p>StoneAge is pleased to announce three new accessories for the AutoBox ABX-2L automated exchanger cleaning system.<br>
-<small><i class="fa fa-paper-plane-o"></i> E-blast, March 2016</small></p>
-      </li>
-      <li>
-        <h4><a href="http://info.stoneagetools.com/new-automated-pipe-cleaning-systems-for-spring-shutdown" target="_blank">New Automated Pipe Cleaning Systems for Spring Shutdown</a></h4>
-        <p>StoneAge is now taking pre-orders for the <strong>Navigator</strong> portable rotary hose device (RHD) and <strong>ProDrive</strong> hands-free hose feed system.<br>
 <small><i class="fa fa-paper-plane-o"></i> E-blast, March 2016</small></p>
       </li>
       <li><a href="/news">More news here</a></li>
