--- a/contact.html
+++ b/contact.html
@@ -76,9 +76,14 @@ contact-main: yes
             <h2><i class="fa fa-share-alt"></i><br/>Share With us</h2>
             <hr>
             <p><span class="thin">We welcome general questions, comments and feedback online.</span></p>
-            <div class="padding-tb-30 margin-top-30 margin-bottom-30">
+            <div class="padding-tb-30 margin-bottom-30">
               <a href="https://twitter.com/stoneagetools" target="_blank" class="btn btn-block share">Tweet @Stoneagetools</a>
               <a href="https://www.facebook.com/Stoneagetools/" target="_blank" class="btn btn-block share">Send Facebook Message</a>
+              <div class="text-center padding-30">
+              <a href="https://itunes.apple.com/us/app/stoneage-waterblast-tools/id1119374675?mt=8" target="_blank">
+              <img src="/assets/img/thumb/app-store-badge.png" class="img-responsive" alt="Download StoneAge mobile app from App Store" style="max-width:200px;"></a>
+              <a href="https://play.google.com/store/apps/details?id=com.bf.app6d94cd" target="_blank"><img src="/assets/img/thumb/google-play-badge.png" class="img-responsive" alt="Download StoneAge mobile app from Google Play" style="max-width:200px;"></a>
+              </div>
             </div>
           </div> 
         </div>
