--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@ permalink: /
     <div class="section-heading">
       <h2>Events</h2>
     </div>
-    <a href="http://www.fuelethanolworkshop.com/" target="_blank"><img src="/assets/img/thumb/upcoming_events_FEW-show-2016.jpg" class="img-responsive"/></a>
+    <a href="/houston"><img src="/assets/img/thumb/upcoming-event-tx-open-house.jpg" class="img-responsive"/></a>
     <div class="caption">
-    <h4><a href="http://www.fuelethanolworkshop.com/" target="_blank">FEW 2016<br><span class="small">June 20-23, 2016<br>
-        Milwaukee, WI</span></a></h4>
-      <p>Now in its 32nd year, the FEW provides the global ethanol industry with cutting-edge content and unparalleled networking opportunities in a dynamic business-to-business environment. The FEW is the largest, longest running ethanol conference in the world — and the only event powered by Ethanol Producer Magazine. 
-      </p>
+    <h4><a href="/houston">Open House Houston<br><span class="small">July 28, 2016<br/>
+        11:00-3:00 pm CST<br/>
+        StoneAge Houston</span></a></h4>
+      <p><strong>Join us for the opening celebration of our StoneAge Houston facility.</strong></p><p>This is an opportunity to see available equipment and talk with the staff  - <em>while enjoying refreshments!</em></p>
     </div>
   </div>
   <!-- End Events --> 
@@ -223,11 +223,12 @@ permalink: /
     <!-- End Lightbox call -->
     
     <div class="section-heading margin-top-30">
-      <h2>New Catalog</h2>
+      <h2>Mobile App</h2>
     </div>
-    <p>The 2016/17 Warthog Sewer Nozzles catalogs are here!</p>
-      <a href="request-catalog">
-      <img src="/assets/img/catalog_cover_sewer_2016.jpg" class="img-responsive" alt="2016 Warthog sewer nozzles catalog"></a>
+    <p>Access our top resources including tool manuals, jetting, tolerances, videos, and contact information right on your mobile devices.</p>
+      <a href="https://itunes.apple.com/us/app/stoneage-waterblast-tools/id1119374675?mt=8" target="_blank">
+      <img src="/assets/img/thumb/app-store-badge.png" class="img-responsive" alt="Download StoneAge mobile app from App Store"></a>
+      <a href="https://play.google.com/store/apps/details?id=com.bf.app6d94cd" target="_blank"><img src="/assets/img/thumb/google-play-badge.png" class="img-responsive" alt="Download StoneAge mobile app from Google Play"></a>
   </div>
 </section>
 
