add configurator examples

--- a/rotary-waterblast-tools/beetle.html
+++ b/rotary-waterblast-tools/beetle.html
@@ -84,7 +84,7 @@ master-slider: yes
           <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
             <div class="panel-body">
               <ul>
-                <li>Clean raduised conduit with internal diameters as small as 5/8 in. (16 mm). <em>See Tool Talk or Manual for radius chart.</em></li>
+                <li>Clean raduised conduit with internal diameters as small as 5/8 in. (16 mm). <em>See Tool Talk for radius chart.</em></li>
                 <li>Patented liquid bearing design means no bearings, seals or lubricants to replace</li>
                 <li>Stainless steel construction for extreme durability and longevity</li>
                 <li>Efficiently remove removing scale, carbons and polymers</li>
