Beetle finals for launch

--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -769,6 +769,7 @@ master-slider: yes
               <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#bt12" aria-controls="bt12" role="tab" data-toggle="tab">BT12</a></li>
                 <li role="presentation"><a href="#bt18" aria-controls="bt18" role="tab" data-toggle="tab">BT18</a></li>
+                <li role="presentation"><a href="#bt25" aria-controls="bt25" role="tab" data-toggle="tab">BT25</a></li>
               </ul>
               <!-- Tab panes -->
               <div class="tab-content">
@@ -887,6 +888,65 @@ master-slider: yes
                   </tbody>
                   </table>
                 </div>
+                <!-- BT25 -->
+                <div role="tabpanel" class="tab-pane" id="bt25">
+                  <table class="table specs table-hover">
+                  <tbody>
+                    <tr>
+                      <th>Tool Family</th>
+                      <td colspan="2">Beetle</td>
+                    </tr>
+                    <tr>
+                      <th>Tool Model</th>
+                      <td colspan="2">BT25</td>
+                    </tr>
+                    <tr>
+                      <th>Tube ID Range</th>
+                      <td>1.2–3.0 in.</td>
+                      <td><span class="metric">30-76 mm</span>
+                    </tr>
+                    <tr>
+                      <th>Pressure Range</th>
+                      <td>8k–22k psi</td>
+                      <td><span class="metric">550–1500 bar</span>
+                    </tr>
+                    <tr>
+                      <th>Flow Range</th>
+                      <td>12-20 gpm</td>
+                      <td><span class="metric">45–76 l/min</span></td>
+                    </tr>
+                    <tr>
+                      <th>Flow Coefficient</th>
+                      <td colspan="2">0.45 Cv</td>
+                    </tr>
+                    <tr>
+                      <th>Pulling Force</th>
+                      <td>12 lb @ 15k psi</td>
+                      <td><span class="metric">5.5 kg @ 1000 bar</span></td>
+                    </tr>
+                    <tr>
+                      <th>Inlet Connection</th>
+                      <td colspan="2">1/8 NPT, 1/4 NPT, 1/4 BSPP, 3/8-28 LH/RH, 9/16-18 LH/RH</td>
+                    </tr>
+                    <tr>
+                      <th>Diameter</th>
+                      <td>1.0 in.</td>
+                      <td><span class="metric">25.4 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Length</th>
+                      <td>1.9 in.</td>
+                      <td><span class="metric">47.5 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Maximum Water Temp.</th>
+                      <td>250 &deg;F</td>
+                      <td><span class="metric">120 &deg;C</span></td>
+                    </tr>
+                  </tbody>
+                  </table>
+                  <small class="gray"><em>See Tool Manual for model details.</em></small>
+                </div>
               </div>
             </div>
           </div>     
@@ -930,8 +990,8 @@ master-slider: yes
                 <li><a href="../assets/pdf/manuals/bn-40k_manual_insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;40k/2800 bar Banshee Models User Manual</a></li>
                 <li><a href="../assets/pdf/manuals/bns13_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Shrouded Banshee (BNS13) User Manual</a></li>
                 <li><a href="../assets/pdf/manuals/bt_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Beetle Models User Manual</a></li>
-                <li><a href="../assets/pdf/sales-manual/BN_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee BN Models Tool Talk</a></li>
-                <li><a href="../assets/pdf/sales-manual/BTL_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Beetle Models Tool Talk</a></li>
+                <li><a href="../assets/pdf/bn_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee BN Models Tool Talk</a></li>
+                <li><a href="../assets/pdf/bn_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Beetle Models Tool Talk</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -955,16 +1015,20 @@ master-slider: yes
   </div>
   <div class="row row-centered">
     <div class="col-sm-2 col-centered">
+      <a href="/beetle"><img class="img-responsive" src="../assets/img/product/thumb-bt-07.jpg" alt="Beetle Pipe Cleaning Tools">
+      <h5>Beetle Pipe Cleaning Tools</h5></a>
+    </div>
+    <div class="col-sm-2 col-centered">
+      <a href="/gopher"><img class="img-responsive" src="../assets/img/product/thumb-gopher-01.jpg" alt="Gopher Tube Cleaning Tools">
+      <h5>Gopher Tube Cleaning Tools</h5></a>
+    </div>
+    <div class="col-sm-2 col-centered">
       <a href="/abx-2l"><img class="img-responsive" src="../assets/img/product/abx-2l-01.jpg" alt="AutoBox ABX-2L Flex Lancing System">
       <h5>AutoBox ABX-2L Flex Lancing System</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
       <a href="/boiler-tube-cleaner"><img class="img-responsive" src="../assets/img/product/thumb-btc-01.jpg" alt="Boiler Tube Cleaner">
       <h5>Boiler Tube Cleaner</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
-      <a href="/gopher"><img class="img-responsive" src="../assets/img/product/thumb-gopher-01.jpg" alt="Gopher Tube Cleaning Tools">
-      <h5>Gopher Tube Cleaning Tools</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
       <a href="/backout-prevention"><img class="img-responsive" src="../assets/img/thumb/thumb-backout-preventers.jpg" alt="High pressure pipe cleaning backout preventers">
@@ -1020,7 +1084,7 @@ master-slider: yes
         <div class="insight">
           <img src="../assets/img/quote.png" alt="quote" class="quote" />
           <p>Lines we've only been able to poke holes in are draining like no one has seen in over 20 years.</p>
-          <p class="signed">-Dean Tramontana,<br/>StoneAge Louisiana</p>
+          <p class="signed">-Waterblast Contractor,<br/>Louisiana</p>
         </div>
         <img src="../assets/img/sliders/beetle-u-tube.jpg" alt="Banshee Beetle for u-tube exchangers">
       </div>
