--- a/rotary-waterblast-tools/beetle.html
+++ b/rotary-waterblast-tools/beetle.html
@@ -32,12 +32,8 @@ master-slider: yes
 <!--                <a data-type="video" href="https://www.youtube.com/embed/mSRf2yelD0I"> </a>-->
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/bt-02.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
-            <img class="ms-thumb" src="../assets/img/product/thumb-bt-02.jpg" alt="thumb">
-          </div>
-          <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/bt-01.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
-            <img class="ms-thumb" src="../assets/img/product/thumb-bt-01.jpg" alt="thumb">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/bt-08.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
+            <img class="ms-thumb" src="../assets/img/product/thumb-bt-08.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
             <img src="../assets/img/blank.gif" data-src="../assets/img/product/bt-03.jpg" alt="Beetle rotary tube cleaning nozzles for small pipes with bends">
@@ -69,8 +65,8 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
 
-      <p class="product-description">The same powerful features that make Badger tools ideal for unplugging, cleaning and polishing pipes have been packed into the smallest rotary tools ever engineered — the Beetle BT18 and BT12.</p>
-      <p>The small diameter and short length of the Beetle models make them ideal for cleaning process piping, drain lines, u-tube bundles and other small ID tubes with bends and elbows that may have been inaccessible in the past.</p>
+      <p class="product-description">The Beetle line of rotary tools leverage off patented technology that has made Banshee nozzles the most successful tube cleaning tools in the industry. Beetle nozzles are engineered to provide the same powerful cleaning features, but in a compact size that is ideal for navigating tubes and small pipes with curves and elbows.</p>
+      <p>The small diameter and short length of the Beetle models make them ideal for cleaning process piping, drain lines, u-tube bundles and other small ID conduit with bends that may have been inaccessible in the past.</p>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
@@ -84,7 +80,7 @@ master-slider: yes
           <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
             <div class="panel-body">
               <ul>
-                <li>Clean raduised conduit with internal diameters as small as 5/8 in. (16 mm). <em>See Tool Talk for radius chart.</em></li>
+                <li>Clean radiused conduit with internal diameters as small as 5/8 in. (16 mm). <em><a href="/assets/pdf/bt_tool_talk.pdf" target="_blank">See Tool Talk for minimum radius recommendations.</a></em></li>
                 <li>Patented liquid bearing design means no bearings, seals or lubricants to replace</li>
                 <li>Stainless steel construction for extreme durability and longevity</li>
                 <li>Efficiently remove removing scale, carbons and polymers</li>
@@ -304,9 +300,9 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="/assets/pdf/BT_rack_card.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Beetle Data Sheet</a></li>
-                <li><a href="/assets/pdf/sales-manual/BTL_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Beetle Tool Talk</a></li>
-                <li><a href="/assets/pdf/manuals/bt_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Beetle User Manual</a></li>
+                <li><a href="/assets/pdf/bt_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Beetle Data Sheet</a></li>
+                <li><a href="/assets/pdf/bt_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Beetle Tool Talk</a></li>
+                <li><a href="/assets/pdf/manuals/BT_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Beetle Manual</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -330,7 +326,7 @@ master-slider: yes
   </div>
   <div class="row row-centered">
     <div class="col-sm-2 col-centered">
-      <a href="/banshee"><img class="img-responsive" src="../assets/img/product/thumb-banshee-01.jpg" alt="Banshee Tube Cleaning Tools">
+      <a href="/banshee"><img class="img-responsive" src="../assets/img/product/thumb-banshee-07.jpg" alt="Banshee Tube Cleaning Tools">
       <h5>Banshee</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
@@ -365,8 +361,8 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/manuals/bt_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Manual</a></td>
-          <td><a href="/assets/pdf/sales-manual/BTL_config.pdf" target="_blank"><i class="fa fa-files-o"></i><br>Download Tool Talk</a></td>
+          <td><a href="/assets/pdf/manuals/BT_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Manual</a></td>
+          <td><a href="/assets/pdf/bt_tool_talk.pdf" target="_blank"><i class="fa fa-files-o"></i><br>Download Tool Talk</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
@@ -378,11 +374,11 @@ master-slider: yes
 <!-- Product Testimonials -->
 <div class="row product-testimonials">
   <div id="carousel-product" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
+    <!-- Indicators 
     <ol class="carousel-indicators">
       <li data-target="#carousel-product" data-slide-to="0" class="active"></li>
       <li data-target="#carousel-product" data-slide-to="1"></li>
-    </ol>
+    </ol>-->
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
@@ -390,7 +386,7 @@ master-slider: yes
         <div class="insight">
           <img src="../assets/img/quote.png" alt="quote" class="quote" />
           <p>Lines we've only been able to poke holes in are draining like no one has seen in over 20 years.</p>
-          <p class="signed">-Dean Tramontana,<br/>StoneAge Louisiana</p>
+          <p class="signed">-Waterblast Contractor,<br/>Louisiana</p>
         </div>
         <img src="../assets/img/sliders/beetle-u-tube.jpg" alt="Banshee Beetle for u-tube exchangers">
       </div>
