--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -138,6 +138,7 @@ permalink: /waterblast-tools-automated-equipment
             <a href="/2inch-badger" class="list-group-item">2" Badger</a>
             <a href="/4inch-badger" class="list-group-item">4" Badger</a>
             <a href="/6inch-badger" class="list-group-item">6" Badger</a>
+            <a href="/beetle" class="list-group-item">Beetle<span class="label label-warning">New for 2016</span></a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
@@ -153,7 +154,7 @@ permalink: /waterblast-tools-automated-equipment
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Exchanger Cleaning</a>
-            <a href="/banshee" class="list-group-item">Banshee/Beetle<span class="label label-danger">Best Selling</span></a>
+            <a href="/banshee" class="list-group-item">Banshee<span class="label label-danger">Best Selling</span></a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
